--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import "../styles/global.css";
+import Navbar from "../components/Navbar.tsx";
+import Header from "../components/Header.tsx";
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,10 +10,14 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Portfolio</title>
 	</head>
 	<body>
-		<slot />
+		<Navbar />
+    <div class="pt-1">
+      <Header/>
+			<slot />
+		</div>
 	</body>
 </html>
 
@@ -18,5 +27,6 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		overflow: auto;
 	}
 </style>
