--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Navbar from "../components/Navbar.tsx";
 import Header from "../components/Header.tsx";
+import Stack from "../components/Stack.tsx";
 ---
 <!doctype html>
 <html lang="en">
@@ -16,6 +17,7 @@ import Header from "../components/Header.tsx";
 		<Navbar />
     <div class="pt-1">
       <Header/>
+      <Stack/>
 			<slot />
 		</div>
 	</body>
