--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
-import Stack from "../components/Stack";
+import Skills from "../components/Skills";
 import Projects from "../components/Projects";
 import Experience from "../components/Experience";
 import Contact from "../components/Contact";
@@ -12,7 +12,7 @@ import Contact from "../components/Contact";
 
 <Layout>
 	<Welcome />
-	<Stack client:load />
+	<Skills client:load />
 	<Experience client:visible />
 	<Projects client:visible />
 	<Contact client:visible />
