--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Projects from "../components/Projects";
 ---
 
 <Layout>
-    <div class="min-h-screen py-20 px-4 max-w-4xl mx-auto text-white">
-        <h1 class="text-4xl font-bold mb-8">Projects</h1>
-        <p class="text-zinc-400">Coming soon...</p>
+    <div class="min-h-screen py-20">
+        <Projects client:load />
     </div>
 </Layout>
