--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header";
 import Skills from "../components/Skills";
@@ -13,9 +12,9 @@ import Contact from "../components/Contact";
 
 <Layout>
 	<Header client:load />
-	<Welcome />
+
 	<Skills client:load />
 	<Experience client:visible />
-	<Projects client:visible />
+	<Projects client:visible limit={4} />
 	<Contact client:visible />
 </Layout>
